--- a/University/css/main.css
+++ b/University/css/main.css
@@ -285,6 +285,7 @@
 
 @media (min-width: 1700px) {
   .button-items {
+    margin-top: 2%;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
@@ -297,7 +298,6 @@
   .page-header__wrapper {
     width: 100%;
     height: 100%;
-    background-color: red;
     background-image: url(../img/cup.jpg);
     background-position: top top; }
   .page-header h1 {
@@ -462,20 +462,6 @@
       width: 70%;
       height: 450px; } }
 
-.specialties:hover .specialties__course {
-  background-color: rgba(255, 255, 255, 0.3);
-  -webkit-box-shadow: 4px 2px 5px 0px rgba(0, 0, 0, 0.75);
-          box-shadow: 4px 2px 5px 0px rgba(0, 0, 0, 0.75);
-  -webkit-transition: all .5s ease-in-out;
-  -o-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out; }
-
-.specialties:hover {
-  -webkit-transition: all .5s ease-in-out;
-  -o-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  background-position: 0% -1000%; }
-
 .specialties {
   -webkit-transition: all .5s ease-in-out;
   -o-transition: all .5s ease-in-out;
@@ -509,6 +495,18 @@
     font-size: 30px; } }
 
 @media (min-width: 1200px) {
+  .specialties:hover .specialties__course {
+    background-color: rgba(255, 255, 255, 0.3);
+    -webkit-box-shadow: 4px 2px 5px 0px rgba(0, 0, 0, 0.75);
+            box-shadow: 4px 2px 5px 0px rgba(0, 0, 0, 0.75);
+    -webkit-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out; }
+  .specialties:hover {
+    -webkit-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    background-position: 0% -200%; }
   .specialties h2 {
     font-size: 55px;
     text-align: left; }
@@ -1049,9 +1047,10 @@ svg path {
         -ms-flex-pack: justify;
             justify-content: space-between; }
   .contacts__information {
-    -webkit-align-self: center;
-        -ms-flex-item-align: center;
-            align-self: center;
+    -webkit-align-self: flex-start;
+        -ms-flex-item-align: start;
+            align-self: flex-start;
+    text-align: right;
     font-size: 20px;
     width: 30%; }
   .contacts__map {
@@ -1062,7 +1061,7 @@ svg path {
 
 .page-main {
   padding: 0;
-  background-color: red;
+  background-color: #ddddd5;
   margin: 0;
   width: 100%;
   height: auto; }
@@ -1138,29 +1137,39 @@ svg path {
             align-self: center; } }
 
 @media (min-width: 1200px) {
-  .page-footer__wrapper {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-            flex-direction: row; }
-  .page-footer__list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 50%; }
-  .page-footer h3 {
-    text-align: right;
-    width: 50%;
-    -webkit-align-self: center;
-        -ms-flex-item-align: center;
-            align-self: center; } }
+  .page-footer {
+    margin: 0;
+    padding: 1% 10%; }
+    .page-footer__wrapper {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row; }
+    .page-footer__list {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      width: 50%;
+      font-size: 14px; }
+    .page-footer__item {
+      padding: 2px;
+      text-align: left;
+      -webkit-align-self: flex-start;
+          -ms-flex-item-align: start;
+              align-self: flex-start; }
+    .page-footer h3 {
+      text-align: right;
+      width: 50%;
+      -webkit-align-self: center;
+          -ms-flex-item-align: center;
+              align-self: center; } }
 
 body {
   font-size: 16px;
