--- a/University/css/main.css
+++ b/University/css/main.css
@@ -303,7 +303,8 @@
   .page-header h1 {
     margin: 0;
     padding: 0;
-    line-height: 1.4; }
+    line-height: 1.4;
+    font-family: 'segoe-ex'; }
   .page-header h2 {
     padding: 0;
     margin: 0;
