--- a/University/css/main.css
+++ b/University/css/main.css
@@ -329,57 +329,65 @@
   font-style: normal; }
 
 .button-items {
-  width: 100%;
-  height: 150px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
+  display: flex; }
   .button-items__learn-more {
-    margin: 10px auto;
-    position: relative; }
-  .button-items__learn-more a {
     display: block;
-    padding: 11px 30px 11px 45px;
-    -webkit-border-radius: 5px;
-            border-radius: 5px;
-    color: #000;
     background-color: #97d7f2;
-    -webkit-transition: background-color, 0.5s linear;
-    -o-transition: background-color, 0.5s linear;
-    transition: background-color, 0.5s linear; }
-    .button-items__learn-more a:hover {
-      background-color: #e6740c; }
-  .button-items__open {
-    margin: 10px auto; }
-  .button-items__open a {
-    display: block;
-    padding: 11px 60px 11px 60px;
-    color: #fff;
-    background-color: #323030;
-    border-right: 3px solid #97d7f2;
-    border-bottom: 3px solid #97d7f2;
-    border-left: 2px solid #97d7f2;
-    -webkit-border-radius: 5px;
-            border-radius: 5px;
-    -webkit-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out; }
-    .button-items__open a:hover {
+    text-align: center;
+    padding: 13px 30px;
+    font-family: "RobotoRegular";
+    cursor: pointer;
+    -webkit-border-radius: 8px 8px 8px 8px;
+            border-radius: 8px 8px 8px 8px;
+    -webkit-transition: background .5s ease-in-out;
+    -o-transition: background .5s ease-in-out;
+    transition: background .5s ease-in-out; }
+    .button-items__learn-more:hover {
       background-color: #e6740c;
-      border-right: 3px solid #fff;
-      border-bottom: 3px solid  #fff;
-      border-left: 2px solid  #fff;
-      color: #000; }
+      -webkit-transition: background .5s ease-in-out;
+      -o-transition: background .5s ease-in-out;
+      transition: background .5s ease-in-out; }
+    .button-items__learn-more:hover::before {
+      background-color: #97d7f2;
+      -webkit-transition: bacground .5s ease-in-out;
+      -o-transition: bacground .5s ease-in-out;
+      transition: bacground .5s ease-in-out; }
+  .button-items__open {
+    display: block;
+    background-color: #323030;
+    text-align: center;
+    font-family: "RobotoRegular";
+    cursor: pointer;
+    -webkit-border-radius: 8px;
+            border-radius: 8px;
+    padding: 13px 30px;
+    -webkit-transition: background .5s ease-in-out;
+    -o-transition: background .5s ease-in-out;
+    transition: background .5s ease-in-out; }
+    .button-items__open:hover {
+      -webkit-transition: background .5s ease-in-out;
+      -o-transition: background .5s ease-in-out;
+      transition: background .5s ease-in-out;
+      background-color: #4c4949; }
+    .button-items__open a {
+      color: #fff; }
+
+@media (min-width: 319px) {
+  .button-items {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .button-items__open {
+      margin-top: 10px; } }
 
 @media (min-width: 768px) {
   .button-items {
@@ -388,36 +396,63 @@
     -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row;
+    width: 700px;
+    margin: 0 auto;
     -webkit-justify-content: space-around;
         -ms-flex-pack: distribute;
-            justify-content: space-around;
-    margin: 0; }
+            justify-content: space-around; }
     .button-items__learn-more {
-      margin: 0; }
+      line-height: 3;
+      padding: 0;
+      width: 200px;
+      height: 50px;
+      position: relative; }
+      .button-items__learn-more:before {
+        position: absolute;
+        content: "!";
+        font-size: 25px;
+        line-height: 2.1;
+        width: 50px;
+        height: 50px;
+        background-color: #e6740c;
+        left: -10%;
+        right: 0;
+        -webkit-border-radius: 3px;
+                border-radius: 3px;
+        font-family: "RobotoBold";
+        -webkit-border-radius: 0px 10px 10px 0px;
+                border-radius: 0px 10px 10px 0px; }
     .button-items__open {
-      margin: 0; } }
+      margin-top: 0;
+      line-height: 3;
+      padding: 0;
+      width: 230px;
+      height: 50px;
+      border-left: 1px solid #97d7f2;
+      border-bottom: 3px solid #97d7f2;
+      border-right: 3px solid #97d7f2; } }
 
 @media (min-width: 1200px) {
   .button-items {
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    margin: 10% 0% 0% 0%; } }
-
-@media (min-width: 1700px) {
-  .button-items {
-    margin-top: 2%;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-            flex-direction: row; } }
+    margin-top: 100px;
+    width: 1100px;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around; }
+    .button-items__learn-more {
+      width: 250px;
+      height: 60px;
+      line-height: 3.5;
+      font-size: 18px; }
+      .button-items__learn-more:before {
+        height: 60px;
+        font-size: 33px;
+        line-height: 2; }
+    .button-items__open {
+      width: 250px;
+      height: 60px;
+      line-height: 3.5;
+      font-size: 18px; } }
 
 .page-header {
   width: 100%;
@@ -449,7 +484,7 @@
     background-color: #f7f2f2; }
   .page-header__about-site {
     width: 100%;
-    height: 70%;
+    height: 60%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -489,7 +524,8 @@
 
 @media (min-width: 768px) {
   .page-header__about-site {
-    padding: 3% 0%; }
+    padding: 3% 0%;
+    height: 54%; }
   .page-header__descript {
     font-size: 55px; }
   .page-header__title {
@@ -502,7 +538,7 @@
     height: 90vh; }
     .page-header__about-site {
       padding: 5% 0% 0%;
-      height: auto; }
+      height: 45%; }
     .page-header__descript {
       font-size: 60px; }
     .page-header__title {
@@ -717,18 +753,14 @@
 
 @media (min-width: 1200px) {
   .specialties:hover .specialties__wrapper {
-    padding: 0% 5%;
-    background-color: rgba(255, 255, 255, 0.3);
-    -webkit-box-shadow: 4px 2px 5px 0px rgba(0, 0, 0, 0.75);
-            box-shadow: 4px 2px 5px 0px rgba(0, 0, 0, 0.75);
     -webkit-transition: all .9s ease-in-out;
     -o-transition: all .9s ease-in-out;
     transition: all .9s ease-in-out; }
   .specialties:hover {
-    -webkit-transition: all .5s ease-in-out;
-    -o-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    background-position: 0% -900%; }
+    -webkit-transition: all 1.2s ease-in-out;
+    -o-transition: all 1.2s ease-in-out;
+    transition: all 1.2s ease-in-out;
+    background-position: 0% 5vh; }
   .specialties h2 {
     font-size: 55px;
     text-align: left; }
@@ -1449,7 +1481,7 @@ svg path {
     -webkit-align-self: flex-start;
         -ms-flex-item-align: start;
             align-self: flex-start;
-    text-align: right;
+    text-align: left;
     font-size: 20px;
     width: 30%; }
   .contacts__map {
