--- a/University/css/main.css
+++ b/University/css/main.css
@@ -527,7 +527,7 @@
     padding: 3% 0%;
     height: 54%; }
   .page-header__descript {
-    font-size: 55px; }
+    font-size: 35px; }
   .page-header__title {
     font-size: 55px; } }
 
@@ -540,7 +540,7 @@
       padding: 5% 0% 0%;
       height: 45%; }
     .page-header__descript {
-      font-size: 60px; }
+      font-size: 45px; }
     .page-header__title {
       font-size: 60px; } }
 
@@ -762,7 +762,7 @@
     transition: all 1.2s ease-in-out;
     background-position: 0% 5vh; }
   .specialties h2 {
-    font-size: 55px;
+    font-size: 35px;
     text-align: left; }
   .specialties svg {
     display: block;
@@ -919,7 +919,7 @@
   .turn h2 {
     margin: 0;
     text-align: right;
-    font-size: 55px;
+    font-size: 35px;
     margin-bottom: 2%;
     font-family: "RobotoBold"; }
 
@@ -1187,7 +1187,7 @@
     -webkit-background-size: contain;
             background-size: contain; }
     .teachers h2 {
-      font-size: 55px; } }
+      font-size: 35px; } }
 
 @font-face {
   font-family: 'RobotoLight';
@@ -1277,11 +1277,11 @@
   width: 100%;
   padding: 0px 12px 100px;
   background: #97d7f2;
-  height: 140px; }
+  height: 120px; }
 
 #wave {
   position: absolute;
-  height: 600px;
+  height: 200px;
   top: 0;
   left: 0;
   width: 100%; }
@@ -1385,7 +1385,7 @@ svg path {
     .students h2 {
       margin: 5% 0%;
       text-align: left;
-      font-size: 55px; }
+      font-size: 35px; }
     .students__wrapper {
       width: 100%; }
     .students__photo {
@@ -1412,6 +1412,123 @@ svg path {
       top: 40%; }
     .students__line {
       width: 28% !important; } }
+
+@font-face {
+  font-family: 'RobotoLight';
+  src: url("../fonts/RobotoLight/RobotoLight.eot");
+  src: url("../fonts/RobotoLight/RobotoLight.eot?iefix") format("eot"), url("../fonts/RobotoLight/RobotoLight.woff") format("woff"), url("../fonts/RobotoLight/RobotoLight.ttf") format("truetype"), url("../fonts/RobotoLight/RobotoLight.svg#webfont") format("svg");
+  font-weight: 300;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'RobotoBold';
+  src: url("../fonts/RobotoBold/RobotoBold.eot");
+  src: url("../fonts/RobotoBold/RobotoBold.eot?iefix") format("eot"), url("../fonts/RobotoBold/RobotoBold.woff") format("woff"), url("../fonts/RobotoBold/RobotoBold.ttf") format("truetype"), url("../fonts/RobotoBold/RobotoBold.svg#webfont") format("svg");
+  font-weight: 700;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'RobotoRegular';
+  src: url("../fonts/RobotoRegular/RobotoRegular.eot");
+  src: url("../fonts/RobotoRegular/RobotoRegular.eot?iefix") format("eot"), url("../fonts/RobotoRegular/RobotoRegular.woff") format("woff"), url("../fonts/RobotoRegular/RobotoRegular.ttf") format("truetype"), url("../fonts/RobotoRegular/RobotoRegular.svg#webfont") format("svg");
+  font-weight: 400;
+  font-style: normal; }
+
+.instagram {
+  padding: 40px 0px;
+  min-height: 500px;
+  background-color: #97d7f2;
+  background-image: url(../img/elipse-section-two.png);
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-attachment: fixed; }
+  .instagram h2 {
+    margin: 0;
+    padding: 0;
+    font-family: "RobotoBold"; }
+  .instagram__item {
+    width: 100%;
+    background-color: #323030;
+    -webkit-border-radius: 10px 5px 10px 5px;
+            border-radius: 10px 5px 10px 5px;
+    border-top: 3px solid #d80b4a; }
+  .instagram__desc {
+    font-family: "RobotoLight";
+    color: #fff;
+    width: 100%;
+    position: relative;
+    border-bottom: 2px solid #fff;
+    cursor: pointer; }
+  .instagram__desc:before {
+    content: " ";
+    position: absolute;
+    width: 20px;
+    height: 21px;
+    left: 5%;
+    right: 0%;
+    bottom: 20%;
+    background-image: url(../img/social-color-sprite.png);
+    background-repeat: no-repeat;
+    background-position: -160px 0; }
+
+@media (min-width: 319px) {
+  .instagram {
+    padding: 20px 0px; }
+    .instagram__wrapper {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .instagram__title {
+      font-size: 30px;
+      text-align: center; }
+    .instagram__item {
+      margin: 0 auto;
+      width: 300px;
+      margin-top: 20px;
+      padding: 10px 0px; }
+    .instagram__desc {
+      padding-left: 60px;
+      font-size: 17px; }
+    .instagram__photo {
+      width: 100%;
+      height: auto; }
+      .instagram__photo img {
+        width: 100%;
+        height: auto; } }
+
+@media (min-width: 768px) {
+  .instagram {
+    padding: 20px; }
+    .instagram__wrapper {
+      width: 100%;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-justify-content: space-around;
+          -ms-flex-pack: distribute;
+              justify-content: space-around;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; } }
+
+@media (min-width: 1200px) {
+  .instagram__title {
+    font-size: 45px; }
+  .instagram__item {
+    width: 300px;
+    height: 340px; }
+  .instagram__photo {
+    padding-top: 30px;
+    width: 100%;
+    height: 250px; } }
 
 @font-face {
   font-family: 'RobotoLight';
@@ -1471,7 +1588,7 @@ svg path {
 @media (min-width: 1200px) {
   .contacts h2 {
     text-align: right;
-    font-size: 55px; }
+    font-size: 35px; }
   .contacts__wrapper {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1629,6 +1746,123 @@ svg path {
       -webkit-align-self: center;
           -ms-flex-item-align: center;
               align-self: center; } }
+
+@font-face {
+  font-family: 'RobotoLight';
+  src: url("../fonts/RobotoLight/RobotoLight.eot");
+  src: url("../fonts/RobotoLight/RobotoLight.eot?iefix") format("eot"), url("../fonts/RobotoLight/RobotoLight.woff") format("woff"), url("../fonts/RobotoLight/RobotoLight.ttf") format("truetype"), url("../fonts/RobotoLight/RobotoLight.svg#webfont") format("svg");
+  font-weight: 300;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'RobotoBold';
+  src: url("../fonts/RobotoBold/RobotoBold.eot");
+  src: url("../fonts/RobotoBold/RobotoBold.eot?iefix") format("eot"), url("../fonts/RobotoBold/RobotoBold.woff") format("woff"), url("../fonts/RobotoBold/RobotoBold.ttf") format("truetype"), url("../fonts/RobotoBold/RobotoBold.svg#webfont") format("svg");
+  font-weight: 700;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'RobotoRegular';
+  src: url("../fonts/RobotoRegular/RobotoRegular.eot");
+  src: url("../fonts/RobotoRegular/RobotoRegular.eot?iefix") format("eot"), url("../fonts/RobotoRegular/RobotoRegular.woff") format("woff"), url("../fonts/RobotoRegular/RobotoRegular.ttf") format("truetype"), url("../fonts/RobotoRegular/RobotoRegular.svg#webfont") format("svg");
+  font-weight: 400;
+  font-style: normal; }
+
+.instagram {
+  padding: 40px 0px;
+  min-height: 500px;
+  background-color: #97d7f2;
+  background-image: url(../img/elipse-section-two.png);
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-attachment: fixed; }
+  .instagram h2 {
+    margin: 0;
+    padding: 0;
+    font-family: "RobotoBold"; }
+  .instagram__item {
+    width: 100%;
+    background-color: #323030;
+    -webkit-border-radius: 10px 5px 10px 5px;
+            border-radius: 10px 5px 10px 5px;
+    border-top: 3px solid #d80b4a; }
+  .instagram__desc {
+    font-family: "RobotoLight";
+    color: #fff;
+    width: 100%;
+    position: relative;
+    border-bottom: 2px solid #fff;
+    cursor: pointer; }
+  .instagram__desc:before {
+    content: " ";
+    position: absolute;
+    width: 20px;
+    height: 21px;
+    left: 5%;
+    right: 0%;
+    bottom: 20%;
+    background-image: url(../img/social-color-sprite.png);
+    background-repeat: no-repeat;
+    background-position: -160px 0; }
+
+@media (min-width: 319px) {
+  .instagram {
+    padding: 20px 0px; }
+    .instagram__wrapper {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .instagram__title {
+      font-size: 30px;
+      text-align: center; }
+    .instagram__item {
+      margin: 0 auto;
+      width: 300px;
+      margin-top: 20px;
+      padding: 10px 0px; }
+    .instagram__desc {
+      padding-left: 60px;
+      font-size: 17px; }
+    .instagram__photo {
+      width: 100%;
+      height: auto; }
+      .instagram__photo img {
+        width: 100%;
+        height: auto; } }
+
+@media (min-width: 768px) {
+  .instagram {
+    padding: 20px; }
+    .instagram__wrapper {
+      width: 100%;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-justify-content: space-around;
+          -ms-flex-pack: distribute;
+              justify-content: space-around;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; } }
+
+@media (min-width: 1200px) {
+  .instagram__title {
+    font-size: 45px; }
+  .instagram__item {
+    width: 300px;
+    height: 340px; }
+  .instagram__photo {
+    padding-top: 30px;
+    width: 100%;
+    height: 250px; } }
 
 body {
   font-size: 16px;
