--- a/University/css/blocks/main/mains.css
+++ b/University/css/blocks/main/mains.css
@@ -40,62 +40,96 @@
   font-weight: 400;
   font-style: normal; }
 
-.our-video__youtube {
-  border: 3px solid #d80b4a; }
+@font-face {
+  font-family: 'RobotoLight';
+  src: url("../fonts/RobotoLight/RobotoLight.eot");
+  src: url("../fonts/RobotoLight/RobotoLight.eot?iefix") format("eot"), url("../fonts/RobotoLight/RobotoLight.woff") format("woff"), url("../fonts/RobotoLight/RobotoLight.ttf") format("truetype"), url("../fonts/RobotoLight/RobotoLight.svg#webfont") format("svg");
+  font-weight: 300;
+  font-style: normal; }
 
-.our-video h2 {
-  font-family: 'RobotoLight'; }
+@font-face {
+  font-family: 'RobotoBold';
+  src: url("../fonts/RobotoBold/RobotoBold.eot");
+  src: url("../fonts/RobotoBold/RobotoBold.eot?iefix") format("eot"), url("../fonts/RobotoBold/RobotoBold.woff") format("woff"), url("../fonts/RobotoBold/RobotoBold.ttf") format("truetype"), url("../fonts/RobotoBold/RobotoBold.svg#webfont") format("svg");
+  font-weight: 700;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'RobotoRegular';
+  src: url("../fonts/RobotoRegular/RobotoRegular.eot");
+  src: url("../fonts/RobotoRegular/RobotoRegular.eot?iefix") format("eot"), url("../fonts/RobotoRegular/RobotoRegular.woff") format("woff"), url("../fonts/RobotoRegular/RobotoRegular.ttf") format("truetype"), url("../fonts/RobotoRegular/RobotoRegular.svg#webfont") format("svg");
+  font-weight: 400;
+  font-style: normal; }
+
+.our-video {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+  .our-video__youtube {
+    border: 3px solid #d80b4a; }
+  .our-video h3 {
+    font-family: 'RobotoLight'; }
+  .our-video .title__wrapper {
+    width: 100%; }
 
 @media (min-width: 319px) {
-  .our-video h2 {
-    font-size: 25px;
-    text-align: center; }
-  .our-video__youtube {
-    width: 100%;
-    height: auto; } }
-
-@media (min-width: 768px) {
   .our-video {
-    width: 600px;
-    height: 300px;
-    margin: 0 auto;
-    margin-bottom: 200px; }
-    .our-video h2 {
-      font-size: 25px; }
-    .our-video__youtube {
-      height: 400px; } }
-
-@media (min-width: 1200px) {
-  .our-video {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-align-self: center;
-        -ms-flex-item-align: center;
-            align-self: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
-            flex-direction: column;
-    width: 800px;
-    height: 400px; }
-    .our-video__youtube {
-      height: 450px; } }
-
-@media (min-width: 1700px) {
-  .our-video {
-    width: 1200px;
-    height: 500px;
-    margin-bottom: 50px; }
-    .our-video h2 {
+            flex-direction: column; }
+    .our-video__wrapper {
+      margin-top: 50px !important;
+      width: 300px;
+      margin: 0 auto; }
+    .our-video h3 {
       margin: 0;
-      font-size: 35px; }
+      padding: 0;
+      font-size: 30px;
+      text-align: center; }
     .our-video__youtube {
-      width: 70%;
-      height: 450px;
-      margin: 0 auto; } }
+      width: 100%;
+      height: auto; } }
+
+@media (min-width: 768px) {
+  .our-video {
+    width: 750px;
+    height: 800px;
+    margin: 0 auto;
+    margin-bottom: 100px; }
+    .our-video h3 {
+      font-size: 25px; }
+    .our-video__wrapper {
+      width: 750px; }
+    .our-video__youtube {
+      display: block;
+      margin: 0 auto;
+      width: 600px;
+      height: 400px; } }
+
+@media (min-width: 1200px) {
+  .our-video {
+    width: 1350px;
+    height: 500px;
+    -webkit-box-align: intitial;
+    -webkit-align-items: intitial;
+        -ms-flex-align: intitial;
+            align-items: intitial;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: row-reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse; }
+    .our-video__wrapper {
+      width: 900px;
+      margin: 0 !important; }
+    .our-video h3 {
+      text-align: center; }
+    .our-video__youtube {
+      width: 100%;
+      height: 450px; } }
 
 @font-face {
   font-family: 'RobotoLight';
@@ -218,7 +252,7 @@
           -ms-flex-pack: distribute;
               justify-content: space-around;
       margin: 50px auto;
-      width: 1400px; }
+      width: 1600px; }
     .block-match__item {
       font-size: 16px; }
     .block-match__inform {
@@ -252,37 +286,82 @@
   font-weight: 400;
   font-style: normal; }
 
+.partners__wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+@media (min-width: 319px) {
+  .partners__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .partners__title {
+    margin: 0;
+    padding: 0;
+    font-size: 30px; }
+  .partners__item {
+    margin-top: 20px; }
+    .partners__item h3 {
+      font-size: 20px; }
+  .partners__image {
+    width: 125px;
+    height: 125px;
+    margin: 0 auto;
+    display: block; } }
+
+@media (min-width: 768px) {
+  .partners__wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around; } }
+
+@media (min-width: 1200px) {
+  .partners h3 {
+    text-align: center; }
+  .partners__wrapper {
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    width: 600px;
+    height: 400px; }
+  .partners__item {
+    width: 220px; } }
+
 .specialties {
   -webkit-transition: all .5s ease-in-out;
   -o-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
-  margin: 0;
   padding: 1% 0% 5%;
   width: 100%;
   height: auto;
   background-color: #ddddd5;
-  background-image: url(../img/section-one.png);
   background-repeat: no-repeat; }
   .specialties .wrepper {
     width: 100%;
     height: auto; }
   .specialties h2 {
-    margin: 0;
-    padding: 0;
-    margin-left: 10%;
     margin-bottom: 5%;
     font-family: "RobotoBold"; }
   .specialties__course {
     background-color: rgba(255, 255, 255, 0);
     -webkit-border-radius: 10px;
             border-radius: 10px; }
-  .specialties svg {
-    margin: 0 auto; }
 
 @media (min-width: 319px) {
   .specialties h2 {
-    margin: 0;
-    padding: 0px 10px;
     text-align: center;
     font-size: 30px; } }
 
@@ -297,9 +376,7 @@
     transition: all 1.2s ease-in-out;
     background-position: 0% 5vh; }
   .specialties h2 {
-    font-size: 45px;
-    margin-left: 10%;
-    text-align: left; }
+    font-size: 45px; }
   .specialties__wrapper {
     width: 100%;
     display: -webkit-box;
@@ -317,84 +394,6 @@
     -webkit-transition: all .5s ease-in-out;
     -o-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out; } }
-
-@font-face {
-  font-family: 'RobotoLight';
-  src: url("../fonts/RobotoLight/RobotoLight.eot");
-  src: url("../fonts/RobotoLight/RobotoLight.eot?iefix") format("eot"), url("../fonts/RobotoLight/RobotoLight.woff") format("woff"), url("../fonts/RobotoLight/RobotoLight.ttf") format("truetype"), url("../fonts/RobotoLight/RobotoLight.svg#webfont") format("svg");
-  font-weight: 300;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'RobotoBold';
-  src: url("../fonts/RobotoBold/RobotoBold.eot");
-  src: url("../fonts/RobotoBold/RobotoBold.eot?iefix") format("eot"), url("../fonts/RobotoBold/RobotoBold.woff") format("woff"), url("../fonts/RobotoBold/RobotoBold.ttf") format("truetype"), url("../fonts/RobotoBold/RobotoBold.svg#webfont") format("svg");
-  font-weight: 700;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'RobotoRegular';
-  src: url("../fonts/RobotoRegular/RobotoRegular.eot");
-  src: url("../fonts/RobotoRegular/RobotoRegular.eot?iefix") format("eot"), url("../fonts/RobotoRegular/RobotoRegular.woff") format("woff"), url("../fonts/RobotoRegular/RobotoRegular.ttf") format("truetype"), url("../fonts/RobotoRegular/RobotoRegular.svg#webfont") format("svg");
-  font-weight: 400;
-  font-style: normal; }
-
-.our-video__youtube {
-  border: 3px solid #d80b4a; }
-
-.our-video h2 {
-  font-family: 'RobotoLight'; }
-
-@media (min-width: 319px) {
-  .our-video h2 {
-    font-size: 25px;
-    text-align: center; }
-  .our-video__youtube {
-    width: 100%;
-    height: auto; } }
-
-@media (min-width: 768px) {
-  .our-video {
-    width: 600px;
-    height: 300px;
-    margin: 0 auto;
-    margin-bottom: 200px; }
-    .our-video h2 {
-      font-size: 25px; }
-    .our-video__youtube {
-      height: 400px; } }
-
-@media (min-width: 1200px) {
-  .our-video {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-align-self: center;
-        -ms-flex-item-align: center;
-            align-self: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 800px;
-    height: 400px; }
-    .our-video__youtube {
-      height: 450px; } }
-
-@media (min-width: 1700px) {
-  .our-video {
-    width: 1200px;
-    height: 500px;
-    margin-bottom: 50px; }
-    .our-video h2 {
-      margin: 0;
-      font-size: 35px; }
-    .our-video__youtube {
-      width: 70%;
-      height: 450px;
-      margin: 0 auto; } }
 
 @font-face {
   font-family: 'RobotoLight';
@@ -591,247 +590,115 @@
   font-weight: 400;
   font-style: normal; }
 
-.carusel {
+.level__item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  -webkit-transition: all .2s ease;
+  -o-transition: all .2s ease;
+  transition: all .2s ease; }
+
+.level__item:hover {
+  -webkit-animation: 2s bgHover linear infinite;
+          animation: 2s bgHover linear infinite; }
+
+@-webkit-keyframes bgHover {
+  0% {
+    background-color: white; }
+  50% {
+    background-color: rgba(255, 255, 255, 0.1); }
+  100% {
+    background-color: white; } }
+
+@keyframes bgHover {
+  0% {
+    background-color: white; }
+  50% {
+    background-color: rgba(255, 255, 255, 0.1); }
+  100% {
+    background-color: white; } }
+
+.level {
   width: 100%;
-  height: auto;
-  position: relative; }
-  .carusel__item {
-    width: 100%;
-    text-align: center; }
-  .carusel__Name {
-    font-size: 20px; }
-  .carusel img {
-    width: 15%;
-    height: auto; }
-  .carusel__image {
-    width: 14% !important;
-    margin: 0 auto;
-    height: auto; }
-
-@media (min-width: 319px) {
-  .carusel img {
-    width: 50%; }
-  .carusel__image {
-    width: 60% !important; }
-  .carusel__information {
-    margin: 0 auto;
-    width: 100%;
-    padding-bottom: 25%; }
-  .carusel .owl-nav {
-    top: 86%; }
-  .carusel .owl-nav .fa {
-    font-size: 60px;
-    position: absolute; }
-  .carusel .owl-nav {
-    position: absolute;
-    width: 100%;
-    top: 87%; }
-  .carusel .owl-nav .fa {
-    font-size: 60px;
-    position: absolute; }
-  .carusel .owl-nav .fa-angle-right {
-    right: 0%; }
-  .carusel .owl-nav .fa-angle-right:hover {
-    color: #d80b4a;
-    -webkit-transition: color .5s ease-in-out;
-    -o-transition: color .5s ease-in-out;
-    transition: color .5s ease-in-out; }
-  .carusel .owl-nav .fa-angle-left:hover {
-    color: #d80b4a;
-    -webkit-transition: color .5s ease-in-out;
-    -o-transition: color .5s ease-in-out;
-    transition: color .5s ease-in-out; }
-  .carusel .owl-next {
-    right: 0;
-    position: absolute; } }
-
-@media (min-width: 768px) {
-  .carusel img {
-    width: 25%;
-    height: auto; }
-  .carusel__image {
-    margin-top: 5%;
-    width: 30% !important; } }
-
-@media (min-width: 1200px) {
-  .carusel img {
-    width: 15% !important;
-    margin-top: 0; }
-  .carusel img {
-    width: 15%;
-    height: auto; }
-  .carusel__information {
-    margin: 0 auto;
-    width: 35%; }
-  .carusel .owl-nav {
-    position: absolute;
-    width: 100%;
-    top: 25%; }
-  .carusel .owl-nav .fa {
-    font-size: 60px;
-    position: absolute; }
-  .carusel .owl-nav .fa-angle-right {
-    right: 0%; }
-  .carusel .owl-nav .fa-angle-right:hover {
-    color: #d80b4a;
-    -webkit-transition: color .5s ease-in-out;
-    -o-transition: color .5s ease-in-out;
-    transition: color .5s ease-in-out; }
-  .carusel .owl-nav .fa-angle-left:hover {
-    color: #d80b4a;
-    -webkit-transition: color .5s ease-in-out;
-    -o-transition: color .5s ease-in-out;
-    transition: color .5s ease-in-out; }
-  .carusel .owl-next {
-    right: 0;
-    position: absolute; } }
-
-.teachers {
-  width: 100%;
-  height: auto;
-  background-color: #ddddd5;
-  background-image: url(../img/light.png);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: scroll;
-  padding: 1% 10% 3% 10%;
-  -webkit-background-size: cover;
-          background-size: cover;
-  -webkit-box-shadow: 0px 12px 16px -4px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 12px 16px -4px rgba(0, 0, 0, 0.75); }
-  .teachers h2 {
-    padding: 0;
-    font-size: 30px;
+  min-height: 300px; }
+  .level a {
+    outline: none; }
+  .level h2 {
     font-family: "RobotoBold"; }
-
-.carusel__Name {
-  font-family: "RobotoBold"; }
-
-.carusel__information {
-  font-family: "RobotoLight"; }
-
-@media (min-width: 319px) {
-  .teachers h2 {
-    text-align: center; } }
-
-@media (min-width: 768px) {
-  .teachers h2 {
-    text-align: left; } }
-
-@media (min-width: 1200px) {
-  .teachers {
-    height: 60vh;
-    background-position: top top;
-    -webkit-background-size: contain;
-            background-size: contain; }
-    .teachers h2 {
-      font-size: 35px; } }
-
-@font-face {
-  font-family: 'RobotoLight';
-  src: url("../fonts/RobotoLight/RobotoLight.eot");
-  src: url("../fonts/RobotoLight/RobotoLight.eot?iefix") format("eot"), url("../fonts/RobotoLight/RobotoLight.woff") format("woff"), url("../fonts/RobotoLight/RobotoLight.ttf") format("truetype"), url("../fonts/RobotoLight/RobotoLight.svg#webfont") format("svg");
-  font-weight: 300;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'RobotoBold';
-  src: url("../fonts/RobotoBold/RobotoBold.eot");
-  src: url("../fonts/RobotoBold/RobotoBold.eot?iefix") format("eot"), url("../fonts/RobotoBold/RobotoBold.woff") format("woff"), url("../fonts/RobotoBold/RobotoBold.ttf") format("truetype"), url("../fonts/RobotoBold/RobotoBold.svg#webfont") format("svg");
-  font-weight: 700;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'RobotoRegular';
-  src: url("../fonts/RobotoRegular/RobotoRegular.eot");
-  src: url("../fonts/RobotoRegular/RobotoRegular.eot?iefix") format("eot"), url("../fonts/RobotoRegular/RobotoRegular.woff") format("woff"), url("../fonts/RobotoRegular/RobotoRegular.ttf") format("truetype"), url("../fonts/RobotoRegular/RobotoRegular.svg#webfont") format("svg");
-  font-weight: 400;
-  font-style: normal; }
-
-.partners {
-  width: 100%;
-  height: 80vh;
-  background-color: #97d7f2; }
-  .partners h2 {
-    padding: 0;
+  .level__item {
+    width: 250px;
+    height: 250px;
+    margin: 0 auto; }
+  .level__image {
+    width: 150px;
+    height: 150px; }
+  .level p {
     margin: 0;
-    font-size: 30px;
-    font-family: 'RobotoBold'; }
-  .partners .agilie__title {
-    font-family: "RobotoRegular"; }
-
-@media (min-width: 319px) {
-  .partners {
-    padding: 2% 10% 5% 10%;
-    width: 100%;
-    height: 100%; }
-    .partners__wrapper {
-      width: 100%;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      text-align: center;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column; }
-    .partners h2 {
-      text-align: center; }
-  .agilie {
-    margin-top: 50px; }
-    .agilie__image {
-      width: 10%; }
-    .agilie__title {
-      padding: 0;
-      margin: 0;
-      font-size: 22px; } }
-
-@media (min-width: 768px) {
-  .partners h2 {
-    text-align: right;
-    padding-bottom: 20px; }
-  .partners__wrapper {
+    padding: 0;
+    font-family: "RobotoBold"; }
+  .level__wrapper {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
+    display: flex; }
+
+@media (min-width: 320px) {
+  .level h2 {
+    font-size: 30px;
+    text-align: center; }
+  .level__wrapper {
+    width: 100%;
+    -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-justify-content: space-around;
-        -ms-flex-pack: distribute;
-            justify-content: space-around; } }
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 300px;
+    margin: 0 auto; }
+  .level__image {
+    margin: 0 auto;
+    display: block; }
+  .level__item {
+    margin-top: 30px; }
+  .level p {
+    text-align: center;
+    font-size: 20px; } }
 
-@media (min-width: 1200px) {
-  .partners {
-    height: 55vh; } }
+@media (min-width: 768px) {
+  .level {
+    height: 350px;
+    padding: 20px 0px; }
+    .level h2 {
+      font-size: 35px; }
+    .level__wrapper {
+      width: 700px;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-justify-content: space-around;
+          -ms-flex-pack: distribute;
+              justify-content: space-around; } }
 
-.hero-gradient {
-  position: relative;
-  width: 100%;
-  padding: 0px 12px 100px;
-  background: #97d7f2;
-  height: 120px; }
-
-#wave {
-  position: absolute;
-  height: 200px;
-  top: 0;
-  left: 0;
-  width: 100%; }
-
-svg path {
-  fill: #deded6; }
-
-@media screen and (min-width: 1024px) {
-  svg {
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-        transform: scale(1.2); } }
+@media (min-width: 768px) {
+  .level {
+    height: 400px; }
+    .level h2 {
+      font-size: 45px; }
+    .level__wrapper {
+      width: 1200px; } }
 
 @font-face {
   font-family: 'RobotoLight';
@@ -866,8 +733,6 @@ svg path {
           box-shadow: inset 0px 10px 40px -15px rgba(0, 0, 0, 0.75);
   position: relative; }
   .students h2 {
-    margin: 0;
-    padding: 0;
     font-family: "RobotoBold"; }
   .students__name {
     font-family: "RobotoBold"; }
@@ -1037,7 +902,7 @@ svg path {
 .owl-nav .fa {
   font-size: 60px;
   position: absolute;
-  left: 27%; }
+  left: 26%; }
 
 .owl-nav .fa-angle-right {
   right: 24% !important; }
@@ -1068,7 +933,11 @@ svg path {
 
 @media (min-width: 1200px) {
   .owl-nav {
-    top: 40%; } }
+    top: 40%; }
+  .owl-next {
+    right: 0%; }
+  .owl-nav .fa {
+    left: 4%; } }
 
 .instagram {
   padding: 40px 0px;
@@ -1157,6 +1026,9 @@ svg path {
               flex-wrap: wrap; } }
 
 @media (min-width: 1200px) {
+  .instagram__wrapper {
+    width: 1200px !important;
+    margin: 0 auto; }
   .instagram__title {
     font-size: 45px; }
   .instagram h2 {
