--- a/University/css/blocks/header/header.css
+++ b/University/css/blocks/header/header.css
@@ -74,6 +74,7 @@ body {
             border-radius: 50%;
     border: 10px solid #fff;
     border-top: 15px solid #97d7f2;
+    border-bottom: 15px solid #97d7f2;
     -webkit-animation: .8s circle linear infinite;
             animation: .8s circle linear infinite; }
   .preloader__title {
