--- a/University/css/main.css
+++ b/University/css/main.css
@@ -116,6 +116,7 @@ body {
             border-radius: 50%;
     border: 10px solid #fff;
     border-top: 15px solid #97d7f2;
+    border-bottom: 15px solid #97d7f2;
     -webkit-animation: .8s circle linear infinite;
             animation: .8s circle linear infinite; }
   .preloader__title {
@@ -645,6 +646,28 @@ body {
 
 @media (min-width: 1200px) {
   .our-video {
+    width: 1100px;
+    height: 500px;
+    -webkit-box-align: intitial;
+    -webkit-align-items: intitial;
+        -ms-flex-align: intitial;
+            align-items: intitial;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: row-reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse; }
+    .our-video__wrapper {
+      width: 900px;
+      margin: 0 !important; }
+    .our-video h3 {
+      text-align: center; }
+    .our-video__youtube {
+      width: 100%;
+      height: 450px; } }
+
+@media (min-width: 1400px) {
+  .our-video {
     width: 1350px;
     height: 500px;
     -webkit-box-align: intitial;
@@ -698,12 +721,22 @@ body {
   border-top: 4px solid #fff;
   border-right: 4px solid #fff; }
   .block-match__inform {
+    position: absolute;
+    width: 450px;
+    height: 300px;
+    top: -50%;
+    left: 100%;
+    display: none;
+    text-transform: lowercase;
     border-top: 2px solid #97d7f2;
     text-align: left;
     font-size: 15px;
     page-break-after: 0px 5px;
-    font-family: "RobotoLight"; }
+    font-family: "RobotoLight";
+    background-color: #323030;
+    z-index: 1; }
   .block-match__desc {
+    cursor: pointer;
     font-family: "RobotoBold";
     color: #000;
     text-align: center;
@@ -715,6 +748,8 @@ body {
     display: block;
     opacity: 1; }
   .block-match__item {
+    display: none;
+    position: relative;
     color: #000;
     border-bottom: 1px solid #fff;
     padding: 10px 0px;
@@ -754,8 +789,7 @@ body {
 
 @media (min-width: 768px) {
   .block-match {
-    width: 350px;
-    height: auto; }
+    width: 350px; }
     .block-match--wrapper {
       display: -webkit-box;
       display: -webkit-flex;
@@ -767,7 +801,7 @@ body {
           -ms-flex-direction: row;
               flex-direction: row;
       font-family: space-between;
-      min-height: 590px;
+      min-height: 300px;
       -webkit-flex-wrap: wrap;
           -ms-flex-wrap: wrap;
               flex-wrap: wrap;
@@ -780,24 +814,35 @@ body {
 
 @media (min-width: 1200px) {
   .block-match {
-    width: 550px; }
+    width: 500px;
+    border-bottom: 20px; }
     .block-match--wrapper {
       -webkit-justify-content: space-around;
           -ms-flex-pack: distribute;
               justify-content: space-around;
       margin: 50px auto;
-      width: 1600px; }
+      width: 1100px; }
+    .block-match__item {
+      font-size: 16px; }
+    .block-match__inform {
+      padding: 10px 20px; } }
+
+@media (min-width: 1500px) {
+  .block-match {
+    width: 600px; }
+    .block-match--wrapper {
+      -webkit-justify-content: space-around;
+          -ms-flex-pack: distribute;
+              justify-content: space-around;
+      margin: 50px auto;
+      width: 1500px; }
     .block-match__item {
       font-size: 16px; }
     .block-match__inform {
       padding: 10px 20px; } }
 
 .acardeon {
-  -webkit-transition: all .5s ease;
-  -o-transition: all .5s ease;
-  transition: all .5s ease;
-  opacity: 0;
-  display: none; }
+  display: block; }
 
 @font-face {
   font-family: 'RobotoLight';
