--- a/University/css/blocks/main/mains.css
+++ b/University/css/blocks/main/mains.css
@@ -263,7 +263,6 @@
     text-align: center;
     font-size: 22px;
     padding: 10px 5px;
-    text-transform: uppercase;
     border-bottom: 2px solid #fff;
     position: relative; }
   .block-match__inform {
@@ -283,6 +282,11 @@
     display: block;
     opacity: 1; }
   .block-match__item {
+    -webkit-transition: -webkit-transform 1s ease;
+    transition: -webkit-transform 1s ease;
+    -o-transition: transform 1s ease;
+    transition: transform 1s ease;
+    transition: transform 1s ease, -webkit-transform 1s ease;
     display: none;
     position: relative;
     color: #000;
@@ -295,8 +299,7 @@
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
-            align-items: center;
-    text-transform: lowercase; }
+            align-items: center; }
   .block-match__item:hover {
     -webkit-transition: all .6s ease;
     -o-transition: all .6s ease;
@@ -1385,6 +1388,9 @@
 .contacts {
   padding: 3% 10% 5%;
   background-color: #262626; }
+  .contacts p {
+    margin: 0;
+    padding: 0; }
   .contacts h2 {
     margin: 0;
     padding: 0;
@@ -1394,7 +1400,12 @@
     border: 3px solid #d80b4a; }
   .contacts__information {
     color: #fff;
-    font-family: "RobotoRegular"; }
+    font-family: "RobotoRegular";
+    font-size: 11px; }
+    .contacts__information span {
+      color: #d80b4a;
+      font-size: 20px;
+      cursor: pointer; }
 
 @media (min-width: 319px) {
   .contacts h2 {
@@ -1430,12 +1441,16 @@
         -ms-flex-pack: justify;
             justify-content: space-between; }
   .contacts__information {
+    margin-top: 0;
     -webkit-align-self: flex-start;
         -ms-flex-item-align: start;
             align-self: flex-start;
+    -webkit-align-content: flex-start;
+        -ms-flex-line-pack: start;
+            align-content: flex-start;
     text-align: left;
-    font-size: 20px;
-    width: 30%; }
+    font-size: 16px;
+    width: 40%; }
   .contacts__map {
     width: 50%; }
   .contacts__google {
