--- a/University/css/main.css
+++ b/University/css/main.css
@@ -834,7 +834,6 @@ body {
     text-align: center;
     font-size: 22px;
     padding: 10px 5px;
-    text-transform: uppercase;
     border-bottom: 2px solid #fff;
     position: relative; }
   .block-match__inform {
@@ -854,6 +853,11 @@ body {
     display: block;
     opacity: 1; }
   .block-match__item {
+    -webkit-transition: -webkit-transform 1s ease;
+    transition: -webkit-transform 1s ease;
+    -o-transition: transform 1s ease;
+    transition: transform 1s ease;
+    transition: transform 1s ease, -webkit-transform 1s ease;
     display: none;
     position: relative;
     color: #000;
@@ -866,8 +870,7 @@ body {
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
-            align-items: center;
-    text-transform: lowercase; }
+            align-items: center; }
   .block-match__item:hover {
     -webkit-transition: all .6s ease;
     -o-transition: all .6s ease;
@@ -1956,6 +1959,9 @@ body {
 .contacts {
   padding: 3% 10% 5%;
   background-color: #262626; }
+  .contacts p {
+    margin: 0;
+    padding: 0; }
   .contacts h2 {
     margin: 0;
     padding: 0;
@@ -1965,7 +1971,12 @@ body {
     border: 3px solid #d80b4a; }
   .contacts__information {
     color: #fff;
-    font-family: "RobotoRegular"; }
+    font-family: "RobotoRegular";
+    font-size: 11px; }
+    .contacts__information span {
+      color: #d80b4a;
+      font-size: 20px;
+      cursor: pointer; }
 
 @media (min-width: 319px) {
   .contacts h2 {
@@ -2001,12 +2012,16 @@ body {
         -ms-flex-pack: justify;
             justify-content: space-between; }
   .contacts__information {
+    margin-top: 0;
     -webkit-align-self: flex-start;
         -ms-flex-item-align: start;
             align-self: flex-start;
+    -webkit-align-content: flex-start;
+        -ms-flex-line-pack: start;
+            align-content: flex-start;
     text-align: left;
-    font-size: 20px;
-    width: 30%; }
+    font-size: 16px;
+    width: 40%; }
   .contacts__map {
     width: 50%; }
   .contacts__google {
